# jttimage

./: .env.example  .gitignore  package-lock.json  package.json  shopify.app.lens-search.toml  shopify.app.toml
app/: root.tsx  routes.api.favorites.delete.test.tsx  routes.api.favorites.test.tsx  routes.api.health.test.tsx  routes.api.image-search.index-products.test.tsx  routes.api.image-search.search.test.tsx  routes.api.recommendations.similar-products.test.tsx  routes.api.storage.uploads.test.tsx  routes.api.upload-history.test.tsx  routes.api.wishlist.test.tsx  routes.app-index-copy.test.ts  routes.app.billing.test.tsx  routes.privacy.test.tsx  routes.storage.uploads.test.tsx  routes.webhooks.app.subscriptions_update.test.tsx  routes.webhooks.app.uninstalled.test.tsx  routes.webhooks.compliance.test.tsx
app/lib/: logger.server.ts  redirect.server.ts  storefront-cors.server.ts
app/routes/: api.favorites.delete.tsx  api.favorites.tsx  api.health.tsx  api.image-search.index-products.tsx  api.image-search.search.tsx  api.recommendations.similar-products.tsx  api.storage.uploads.$.tsx  api.upload-history.tsx  api.wishlist.tsx  app._index.tsx  app.billing.return.tsx  app.billing.tsx  app.settings.tsx  app.tsx  privacy.tsx  storage.uploads.$.tsx  webhooks.app.subscriptions_update.tsx  webhooks.app.uninstalled.tsx  webhooks.customers.data_request.tsx  webhooks.customers.redact.tsx  (+4 more)
docs/: production-runbook.md
prisma/: schema.prisma
services/embedding/: Dockerfile  README.md  pyproject.toml
services/embedding/app/: main.py
services/embedding/tests/: test_main.py
(+56 files in other folders)
